--- a/.github/workflows/update_proxies.yml
+++ b/.github/workflows/update_proxies.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Set up Elixir
         uses: erlef/setup-beam@v1
         with:
-          version-file: .tool-versions
-          version-type: strict
+          otp-version: "27.2"
+          elixir-version: "1.18.2"
 
       - name: Restore dependencies cache
         uses: actions/cache@v4
